Set up initial SCSS framework and basic responsive page layout

--- a/src/scss/base/_html.scss
+++ b/src/scss/base/_html.scss
@@ -1,7 +1,8 @@
 //
 // HTML
+// 1. Prevent adjustments of font size after orientation changes in iOS.
 // -----------------------------------------------------------------------------
 
 html {
-  border: 10px solid green;
+  text-size-adjust: 100%;  // 1
 }
