--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -2,4 +2,17 @@
 // SASS Manifest
 // -----------------------------------------------------------------------------
 
+// Abstracts
+@import 'abstracts/maps/breakpoints', 'abstracts/mixins/respond-above', 'abstracts/mixins/respond-below';
+@import 'abstracts/maps/colors', 'abstracts/functions/set-color';
+@import 'abstracts/maps/icons', 'abstracts/functions/set-icon';
+@import 'abstracts/variables/fonts';
+
+// Base
+@import 'base/body';
 @import 'base/html';
+
+// Components
+
+// Layouts
+@import 'layouts/all';
