Updated breakpoints - added avatar - added basic header layout and styles for small viewports

--- a/src/scss/abstracts/maps/_breakpoints.scss
+++ b/src/scss/abstracts/maps/_breakpoints.scss
@@ -3,9 +3,7 @@
 // -----------------------------------------------------------------------------
 
 $breakpoints: (
-  xs: 0,
-  sm: 36rem, // 576px
-  md: 48rem, // 768px
-  lg: 62rem, // 992px
-  xl: 75rem // 1200px
+  small: 36rem, // 576px
+  medium: 48rem, // 768px
+  big: 62rem // 992px
 );
