--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -14,6 +14,8 @@
 @import 'base/html';
 
 // Components
+@import 'components/avatar';
+@import 'components/header';
 
 // Layouts
 @import 'layouts/all';
