--- a/src/scss/layouts/_all.scss
+++ b/src/scss/layouts/_all.scss
@@ -5,10 +5,12 @@
 .page {
   margin-left: 1rem;
   margin-right: 1rem;
+  margin-top: 2rem;
 
-  @include respond-above(lg) {
+  @include respond-above(big) {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 4rem;
     max-width: 60rem;
   }
 }
