Adding navigation component for contact list and supporting SCSS

--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -6,16 +6,20 @@
 @import 'abstracts/maps/breakpoints', 'abstracts/mixins/respond-above', 'abstracts/mixins/respond-below';
 @import 'abstracts/maps/colors', 'abstracts/functions/set-color';
 @import 'abstracts/maps/icons', 'abstracts/functions/set-icon';
+@import 'abstracts/mixins/group-horizontal';
 @import 'abstracts/variables/fonts';
 
 // Base
 @import 'base/body';
 @import 'base/headings';
 @import 'base/html';
+@import 'base/lists';
 
 // Components
 @import 'components/avatar';
+@import 'components/groups';
 @import 'components/header';
+@import 'components/nav';
 
 // Layouts
 @import 'layouts/all';
