--- a/src/hbs/partials/global/nav.hbs
+++ b/src/hbs/partials/global/nav.hbs
@@ -1,5 +1,5 @@
-<nav class="nav-contact">
-  <ul class="nav-contact-list">
+<nav class="nav">
+  <ul class="nav-list">
     <li><a class="icon icon-email" href="mailto:rich.cookson@gmail.com">rich.cookson@gmail.com</a></li>
     <li><a class="icon icon-telephone" href="tel:447792871698">+44 7792 871 698</a></li>
     <li><a class="icon icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
