--- a/src/scss/components/_avatar.scss
+++ b/src/scss/components/_avatar.scss
@@ -2,7 +2,7 @@
 // Avatar
 // -----------------------------------------------------------------------------
 
-.avatar {
+%avatar {
   background-image: url('/assets/img/png/avatar.png');
   background-position: top center;
   background-repeat: no-repeat;
