Added hyperlink base styles

--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -13,6 +13,7 @@
 @import 'base/body';
 @import 'base/headings';
 @import 'base/html';
+@import 'base/hyperlinks';
 @import 'base/lists';
 
 // Components
