--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -13,20 +13,32 @@
     }
   }
 
-  // li {
-  //   margin-bottom: 0.5rem;
-  //
-  //   @include respond-above(medium) {
-  //     margin-bottom: 0;
-  //   }
-  // }
+  li {
+    margin-bottom: 0.5rem;
 
-  // a {
-  //   margin-right: 0.5rem;
-  //   padding: 0.5rem 0.5rem 1.5rem;
+    @include respond-above(medium) {
+      margin-bottom: 0;
+    }
+  }
+
+  a {
+    margin-right: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    position: relative;
+    vertical-align: middle;
+
+    // &:before {
+    //   margin-right: 0.5rem;
+    //   position: absolute;
+    //   top: 50%;
+    //   transform: translateY(-50%);
+    // }
+  }
+
   //
   //   // Position and size icons in this context
-  //   &:before {
+  //
   //     //@include position(absolute, 50% null null 0);
   //     //@include size(em(24));
   //     background-position: left center;
