Added skill tag styles

--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -22,6 +22,7 @@
 @import 'components/header';
 @import 'components/icons';
 @import 'components/nav';
+@import 'components/tags';
 
 // Layouts
 @import 'layouts/all';
