--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -15,13 +15,17 @@
 @import 'base/html';
 @import 'base/hyperlinks';
 @import 'base/lists';
+@import 'base/paragraphs';
 
 // Components
+@import 'components/articles';
 @import 'components/avatar';
 @import 'components/groups';
 @import 'components/header';
 @import 'components/icons';
+@import 'components/list-unordered';
 @import 'components/nav';
+@import 'components/sections';
 @import 'components/tags';
 
 // Layouts
