--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .section {
-  margin-bottom: 1.5rem;;
+  margin-bottom: 1.5rem;
 
   @include respond-above(medium) {
     margin-bottom: 2rem;
