--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -8,4 +8,22 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  &-header {
+    margin-bottom: 0.5rem;
+  }
+
+  &-heading {
+    margin-bottom: 0.25rem;
+  }
+
+  &-metadata {
+    @include respond-above(medium) {
+      @include group-horizontal();
+
+      .duration {
+        margin-left: 0.5rem;
+      }
+    }
+  }
 }
