--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -20,6 +20,7 @@
 // Components
 @import 'components/articles';
 @import 'components/avatar';
+@import 'components/duration';
 @import 'components/groups';
 @import 'components/header';
 @import 'components/icons';
