--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -1,7 +1,7 @@
 <section class="section section-career">
   <header class="section-header">
     <h2>Recent work</h2>
-    <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
+    <p>Here’s what I’ve been doing over the last three years or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
   </header>
 
   <div class="section-content">
@@ -136,7 +136,7 @@
       <header class="article-header">
         <h3 class="article-heading">Brand style-guide app update for Futurebrand</h3>
         <div class="article-metadata">
-          <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+          <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
           <span class="duration">
             <time datetime="03-2017">March 2017</time> to <time datetime="04-2017">April 2017</time>
           </span>
