--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -3,6 +3,12 @@
 // ---------------------------------------------------------------------------------
 
 .nav {
+  margin-bottom: 1.5rem;
+
+  @include respond-above(medium) {
+    margin-bottom: 2rem;
+  }
+  
   .nav-list {
     @include respond-above(medium) {
       @include group-horizontal();
