--- a/src/scss/layouts/_all.scss
+++ b/src/scss/layouts/_all.scss
@@ -3,14 +3,63 @@
 // -----------------------------------------------------------------------------
 
 .page {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin-top: 2rem;
 
-  @include respond-above(big) {
+  @include respond-above(medium) {
     margin-left: auto;
     margin-right: auto;
     margin-top: 4rem;
-    max-width: 60rem;
+    max-width: 55rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+.header {
+  &:before {
+    @include respond-below(medium) {
+      margin-bottom: 1rem;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @include respond-above(medium) {
+      left: 0;
+      position: absolute;
+    }
+  }
+}
+
+.nav,
+.name,
+.main,
+.introduction {
+  @include respond-above(medium) {
+    margin-left: 6.5rem;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-skills {
+  @include respond-below(medium) {
+    order: 2;
+  }
+}
+
+.section-career {
+  @include respond-below(medium) {
+    order: 1;
+  }
+}
+
+.section-about {
+  @include respond-below(medium) {
+    order: 3;
   }
 }
