Adjusted title in career content

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,7 +8,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Lead developer creating a large web portal for Tilt</h3>
+        <h3 class="article-heading">Lead developer creating a corporate web portal for Tilt</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
           <span class="duration">
