Setting up top button

--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -30,6 +30,7 @@
 @import 'components/nav';
 @import 'components/sections';
 @import 'components/tags';
+@import 'components/top';
 
 // Layouts
 @import 'layouts/all';
