--- a/src/hbs/partials/global/top.hbs
+++ b/src/hbs/partials/global/top.hbs
@@ -1,1 +1,3 @@
-<a class="top js-top" title="Return to top of page" href="#">Return to top of page</a>
+<div class="top">
+  <a class="top-link" title="Return to top of page" href="#">Return to top of page</a>
+</div>
