--- a/src/scss/components/_top.scss
+++ b/src/scss/components/_top.scss
@@ -5,61 +5,41 @@
 // 2. Required to layer over the hidden text on parent
 // ---------------------------------------------------------------------------------
 
-.floating-action-button {
-  @include animation-warp(0, 0.25s, $direction: out);
-  background-color: set-color(brand, accent);
-  border-radius: 3.5rem;
-  box-shadow: 0 0.4375rem 0.3125rem -0.25rem rgba(0, 0, 0, 0.15); // [ToDo]
-  display: none; // [ToDo] JS class
-  height: 3.5rem;
-  position: relative;
-  width: 3.5rem;
+.top {
+  background-color: red;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 10px;
 
-  &:before {
-    @include animation-spin(0, 0.25s, $direction: counter-clockwise);
-    bottom: 0; // [ToDo] - Flexbox?
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
+  &-link {
+    @include animation-warp(0, 0.25s, $direction: out);
+    background-color: set-color(brand, accent);
+    border-radius: 3.5rem;
+    box-shadow: 0 0.4375rem 0.3125rem -0.25rem rgba(0, 0, 0, 0.15); // [ToDo]
+    display: none; // [ToDo] JS class
+    height: 3.5rem;
+    left: 1.5rem;
+    position: fixed;
+    right: 1.5rem;
+    width: 3.5rem;
 
-  &.js-animate {
-    @include animation-warp(0, 0.25s, $direction: in);
+    &:before {
+      @include animation-spin(0, 0.25s, $direction: counter-clockwise);
+      bottom: 0; // [ToDo] - Flexbox?
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
 
-    &:after {
-      @include animation-spin(0, 0.25s, $direction: clockwise);
+    &.display {
+      @include animation-warp(0, 0.25s, $direction: in);
+
+      &:after {
+        @include animation-spin(0, 0.25s, $direction: clockwise);
+      }
     }
   }
-
-  // @include animation-warp(0, 0.25s, $direction: out);
-  // @include circle();
-  // @include hide-text;
-  // @include size(rem(56));
-  //
-  // background-color: setColor(brand, color_accent);
-  // box-shadow: 0px 7px 5px -4px rgba(0,0,0,0.15); // 1
-  // display: none;
-  // padding: initial;
-  //
-  // @media print {
-  //   display: none !important;
-  // }
-  //
-  // // Icon
-  // &:before {
-  //   @include animation-spin(0, 0.25s, $direction: counter-clockwise);
-  //   @include position(absolute, 0 0 0 0); // 2
-  //   @include size(100%);
-  //   background-position: center;
-  // }
-  //
-  // // JavaScript enabled
-  // &.js-animate {
-  //   @include animation-warp(0, 0.25s, $direction: in);
-  //
-  //   &:after {
-  //     @include animation-spin(0, 0.25s, $direction: clockwise);
-  //   }
-  // }
 }
