--- a/src/hbs/partials/global/top.hbs
+++ b/src/hbs/partials/global/top.hbs
@@ -1,3 +1,3 @@
 <div class="top">
-  <a class="top-link" title="Return to top of page" href="#">Return to top of page</a>
+  <a class="button-top" title="Return to top of page" href="#">Return to top of page</a>
 </div>
