--- a/src/scss/components/_top.scss
+++ b/src/scss/components/_top.scss
@@ -6,22 +6,21 @@
 // ---------------------------------------------------------------------------------
 
 .top {
-  background-color: red;
-  height: 100vh;
+  height: 150vh;
   position: absolute;
   right: 0;
   top: 0;
   width: 10px;
 
-  &-link {
+  .button-top {
     @include animation-warp(0, 0.25s, $direction: out);
     background-color: set-color(brand, accent);
     border-radius: 3.5rem;
+    bottom: 1.5rem;
     box-shadow: 0 0.4375rem 0.3125rem -0.25rem rgba(0, 0, 0, 0.15); // [ToDo]
-    display: none; // [ToDo] JS class
+    display: block; // [ToDo] JS class
     height: 3.5rem;
-    left: 1.5rem;
-    position: fixed;
+    position: absolute;
     right: 1.5rem;
     width: 3.5rem;
 
@@ -36,6 +35,7 @@
 
     &.display {
       @include animation-warp(0, 0.25s, $direction: in);
+      position: fixed;
 
       &:after {
         @include animation-spin(0, 0.25s, $direction: clockwise);
