--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -18,6 +18,7 @@
 @import 'base/hyperlinks';
 @import 'base/lists';
 @import 'base/paragraphs';
+@import 'base/sr-only';
 
 // Components
 @import 'components/articles';
