--- a/src/hbs/partials/global/top.hbs
+++ b/src/hbs/partials/global/top.hbs
@@ -1,3 +1,5 @@
 <div class="top">
-  <a class="button-top" title="Return to top of page" href="#">Return to top of page</a>
+  <a class="icon icon-arrow button-top" title="Return to top of page" href="#">
+    <span class="sr-only">Return to top of page</span>
+  </a>
 </div>
