Updated git link and icon

--- a/src/hbs/partials/global/nav.hbs
+++ b/src/hbs/partials/global/nav.hbs
@@ -2,6 +2,6 @@
   <ul class="nav-list">
     <li><a class="icon icon-email" href="mailto:rich.cookson@frobitz.com">rich.cookson@frobitz.com</a></li>
     <li><a class="icon icon-telephone" href="tel:447792871698">+44 7792 871 698</a></li>
-    <li><a class="icon icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
+    <li><a class="icon icon-gitlab" rel="external" href="https://gitlab.com/hellorich">gitlab/hellorich</a></li>
   </ul>
 </nav>
