Updated career with Iris project

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,11 +8,32 @@
 
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Developer working on B2B eLearning site for Iris Worldwide</h3>
+        <div class="article-metadata">
+          <a rel="external" href="http://www.iris-worldwide.com">www.iris-worldwide.com</a>
+          <span class="duration">
+            <time datetime="04-2019">April 2019</time> to <time datetime="09-2019">September 2019</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Took over development of numerous microsite builds for a B2B product.</p>
+        <ul class="list">
+          <li>Audited existing microsite code which was based on Node, Gulp and Bootstrap</li>
+          <li>Improved tooling and framework for microsites to improve reusability and optimise page performance</li>
+          <li>Supported lead front end developer on the redesign of the B2B eLearning site</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">Lead developer creating a corporate web portal for Tilt</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
           <span class="duration">
-            <time datetime="03-2018">April 2018</time> to <time datetime="03-2019">March 2019</time>
+            <time datetime="04-2018">April 2018</time> to <time datetime="03-2019">March 2019</time>
           </span>
         </div>
       </header>
