--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,7 +8,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Developer working on B2B eLearning site for Iris Worldwide</h3>
+        <h3 class="article-heading">Working on B2B eLearning site for Iris Worldwide</h3>
         <div class="article-metadata">
           <a rel="external" href="http://www.iris-worldwide.com">www.iris-worldwide.com</a>
           <span class="duration">
