--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -9,6 +9,10 @@
     margin-bottom: 2rem;
   }
 
+  @media print {
+    margin-bottom: 1rem;
+  }
+  
   &-header {
     h2 {
       border-bottom: 0.0625rem solid set-color(neutral, gray-85);
