--- a/src/scss/base/_headings.scss
+++ b/src/scss/base/_headings.scss
@@ -14,21 +14,16 @@ h1 {
   font-weight: 900;
   letter-spacing: -0.0625rem;
   text-align: center;
-  //
-  // @include respond-above(small) {
-  //   font-size: 3rem;
-  // }
 
   @include respond-above(medium) {
     font-size: 4rem;
     text-align: left;
   }
 
-  // @media print  {
-  //   font-size: 2rem;
-  //   letter-spacing: 0;
-  //   text-align: left;
-  // }
+  @media print  {
+    font-size: 2rem;
+    letter-spacing: 0;
+  }
 }
 
 h2 {
@@ -36,9 +31,9 @@ h2 {
   font-size: 2rem;
   font-weight: 900;
 
-  // @media print  {
-  //   font-size: 1.5rem;
-  // }
+  @media print  {
+    font-size: 1.5rem;
+  }
 }
 
 h3 {
@@ -46,7 +41,7 @@ h3 {
   font-size: 1.5rem;
   font-weight: 900;
 
-  // @media print  {
-  //   font-size: rem(18);
-  // }
+  @media print  {
+    font-size: 1.125rem;
+  }
 }
