Added skill level colors and key

--- a/src/scss/abstracts/maps/_colors.scss
+++ b/src/scss/abstracts/maps/_colors.scss
@@ -19,5 +19,9 @@ $palettes: (
     primary-dark: rgb(25, 118, 210),
     primary-light: rgb(187, 222, 251),
     accent: rgb(255, 87, 34)
+  ),
+  skill: (
+    advanced: rgb(33, 150, 243),
+    basic: rgb(33, 201, 243)
   )
 );
