--- a/src/hbs/partials/content/section-skills.hbs
+++ b/src/hbs/partials/content/section-skills.hbs
@@ -4,32 +4,54 @@
   </header>
   <div class="section-content">
     <ul class="group-horizontal">
-      <li class="tag"><a rel="external" href="https://developer.mozilla.org/en/docs/Web/Guide/HTML/HTML5">HTML</a></li>
-      <li class="tag"><a rel="external" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
-      <li class="tag"><a rel="external" href="http://sass-lang.com">SASS</a></li>
-      <li class="tag"><a rel="external" href="https://www.w3.org/standards/webdesign/accessibility">Accessibility</a></li>
-      <li class="tag"><a rel="external" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
-      <!-- <li class="tag"><a rel="external" href="https://reactjs.org">React</a></li> -->
-      <li class="tag"><a rel="external" href="https://expressjs.com">Express</a></li>
-      <li class="tag"><a rel="external" href="https://nodejs.org">Node</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://developer.mozilla.org/en/docs/Web/Guide/HTML/HTML5">HTML</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="http://sass-lang.com">SASS</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://www.w3.org/standards/webdesign/accessibility">Accessibility</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
+      <li class="tag skill-level-basic"><a class="link" rel="external" href="https://vuejs.org">Vue</a></li>
+      <li class="tag skill-level-basic"><a class="link" rel="external" href="https://reactjs.org">React</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://expressjs.com">Express</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://nodejs.org">Node</a></li>
       <!-- <li class="tag"><a rel="external" href="https://www.mongodb.com">MongoDB</a></li> -->
-      <!-- <li class="tag"><a rel="external" href="https://webpack.js.org">Webpack</a></li> -->
-      <li class="tag"><a rel="external" href="https://jquery.com">jQuery</a></li>
-      <li class="tag"><a rel="external" href="https://gulpjs.com">Gulp</a></li>
-      <li class="tag"><a rel="external" href="https://gruntjs.com">Grunt</a></li>
-      <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
-      <li class="tag"><a rel="external" href="https://wordpress.org">Wordpress</a></li>
-      <li class="tag"><a rel="external" href="https://craftcms.com">Craft CMS</a></li>
-      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)">LAMP Stack</a></li>
-      <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Unix Command Line</a></li>
-      <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
-      <li class="tag"><a rel="external" href="http://atomicdesign.bradfrost.com">Atomic Design</a></li>
-      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Design</a></li>
-      <li class="tag"><a rel="external" href="https://www.sketchapp.com">Sketch</a></li>
-      <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
-      <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
-      <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
-      <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://jquery.com">jQuery</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://gulpjs.com">Gulp</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://gruntjs.com">Grunt</a></li>
+      <li class="tag skill-level-basic"><a class="link" rel="external" href="https://webpack.js.org">Webpack</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://git-scm.com">Git</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://craftcms.com">Craft CMS</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://en.wikipedia.org/wiki/LAMP_(software_bundle)">LAMP Stack</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="http://www.opengroup.org/unix">Unix Command Line</a></li>
+      <li class="tag skill-level-basic"><a class="link" rel="external" href="https://www.docker.com">Docker</a></li>
+      <li class="tag skill-level-basic"><a class="link" rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="http://atomicdesign.bradfrost.com">Atomic Design</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Design</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://www.sketchapp.com">Sketch</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="http://foundation.zurb.com">Foundation</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+      <li class="tag skill-level-advanced"><a class="link" rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
+    </ul>
+
+    <ul class="group-horizontal key">
+      <li>
+        <figure class="key-item skill-level-basic">
+          <span class="key-example"></span>
+          <figcaption class="key-caption">
+            Basic
+          </figcaption>
+        </figure>
+      </li>
+
+      <li>
+        <figure class="key-item skill-level-advanced">
+          <span class="key-example"></span>
+          <figcaption class="key-caption">
+            Advanced
+          </figcaption>
+        </figure>
+      </li>
     </ul>
   </div>
 </section>
