--- a/src/scss/manifest.scss
+++ b/src/scss/manifest.scss
@@ -13,6 +13,7 @@
 
 // Base
 @import 'base/body';
+@import 'base/figure';
 @import 'base/headings';
 @import 'base/html';
 @import 'base/hyperlinks';
@@ -27,9 +28,11 @@
 @import 'components/groups';
 @import 'components/header';
 @import 'components/icons';
+@import 'components/key';
 @import 'components/list-unordered';
 @import 'components/nav';
 @import 'components/sections';
+@import 'components/skill-level';
 @import 'components/tags';
 @import 'components/top';
 
