Set visited states

--- a/src/scss/base/_hyperlinks.scss
+++ b/src/scss/base/_hyperlinks.scss
@@ -9,7 +9,7 @@ a {
     color: set-color(brand, primary);
   }
 
-  &:active, &:focus, &:hover {
+  &:active, &:focus, &:hover, &:visited {
     color: set-color(brand, accent);
     outline: none; // [TODO] - Make better outline that looks good in all contexts
   }
