Updated Iris entry with more information

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -8,7 +8,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Working on B2B eLearning site for Iris Worldwide</h3>
+        <h3 class="article-heading">Redesign and improvements to Samsung Backstage for Iris Worldwide</h3>
         <div class="article-metadata">
           <a rel="external" href="http://www.iris-worldwide.com">www.iris-worldwide.com</a>
           <span class="duration">
@@ -18,11 +18,11 @@
       </header>
 
       <div class="article-content">
-        <p>Took over development of numerous microsite builds for a B2B product.</p>
+        <p>Took over development of numerous content microsite builds for <a rel="external" href="https://www.samsungbackstage.co.uk">Samsung Backstage</a>, a portal for sales staff to learn about Samsung's range of mobile devices.</p>
         <ul class="list">
           <li>Audited existing microsite code which was based on Node, Gulp and Bootstrap</li>
           <li>Improved tooling and framework for microsites to improve reusability and optimise page performance</li>
-          <li>Supported lead front end developer on the redesign of the B2B eLearning site</li>
+          <li>Supported lead front end developer and Moodle developers on the redesign of the Samsung Backstage</li>
         </ul>
       </div>
     </article>
