Fixed grammatical issue

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -22,7 +22,7 @@
         <ul class="list">
           <li>Audited existing microsite code which was based on Node, Gulp and Bootstrap</li>
           <li>Improved tooling and framework for microsites to improve reusability and optimise page performance</li>
-          <li>Supported lead front end developer and Moodle developers on the redesign of the Samsung Backstage</li>
+          <li>Supported lead front end developer and Moodle developers on the redesign of Samsung Backstage</li>
         </ul>
       </div>
     </article>
