Added Clicky traffic tracking scripts

--- a/src/hbs/partials/global/head.hbs
+++ b/src/hbs/partials/global/head.hbs
@@ -10,5 +10,8 @@
   <script src="https://use.typekit.net/opv2wpe.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
+  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101219678);</script>
+  <script async src="//static.getclicky.com/js"></script>
+
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
