--- a/src/hbs/partials/global/head.hbs
+++ b/src/hbs/partials/global/head.hbs
@@ -10,8 +10,15 @@
   <script src="https://use.typekit.net/opv2wpe.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101219678);</script>
-  <script async src="//static.getclicky.com/js"></script>
+  <script>
+  !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+  arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+  d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+  insertBefore(d,q)}(window,document,'script','_gs');
+
+  _gs('GSN-547185-E');
+  _gs('set', 'anonymizeIP', true);
+  </script>
 
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
