--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -5,6 +5,47 @@
   </header>
 
   <div class="section-content">
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Converting Drupal sites to Wordpress for Tilt</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
+          <span class="duration">
+            <time datetime="02-2020">February 2020</time> to <time datetime="04-2020">April 2020</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Reworking three Drupal websites to use Wordpress, while retaining look and feel and functionality.</p>
+        <ul class="list">
+          <li>Developed front end of the sites from scratch as Wordpress themes</li>
+          <li>Architected Custom Post Types and Custom Taxonomies</li>
+          <li>Constructed custom Gutenberg blocks and other functionality using Advanced Custom Fields</li>
+          <li>Set up and documented local development environment</li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Working on legacy applications for Hugo and Cat</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.hugoandcat.com">www.hugoandcat.com</a>
+          <span class="duration">
+            <time datetime="11-2019">November 2019</time> to <time datetime="02-2020">February 2020</time>
+          </span>
+        </div>
+      </header>
+
+      <div class="article-content">
+        <p>Worked on two projects. One to assist in incorporating a complex legacy web application into a modern site for a large financial firm, and another to reverse engineer a store locator application to make modifications.</p>
+        <ul class="list">
+          <li>Aided lead developer in working with US and India-based management and development teams to integrate the legacy application into the more modern site.</li>
+          <li>Utilised Docker to mock up original server infrastructure used by the store locator application so modifications could be made.</li>
+        </ul>
+      </div>
+    </article>
 
     <article class="article article-work">
       <header class="article-header">
