Updated career path

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -7,6 +7,92 @@
   <div class="section-content">
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Managing and developing Hugo static sites for Tilt</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
+          <span class="duration">
+            <time datetime="12-2020">December 2020</time> to <time datetime="07-2022">July 2022</time>
+          </span>
+        </div>
+      </header>
+    
+      <div class="article-content">
+        <p>In charge of the management and development of a Sharepoint rapid site development framework based on <a rel="external" href="https://gohugo.io/">Hugo static site generator</a>, JavaScript, PowerShell scripts and Sharepoint API, for a multinational pharmaceutical corporation.</p>
+        <ul class="list">
+          <li>Managed development on improvements to the initial framework to improve structure and usability of the scripts and code.</li>
+          <li>Produced components in JavaScript and Hugo Shortcodes to allow rich features such as Search, User Challenges, Quiz's, Carousels and other custom functionality.</li>
+          <li>Moved development from an old JQuery stack to using modular ES6 vanilla JavaScript once IE 11 support was dropped.</li>
+          <li>Developed and wrote rich documentation for all features and components utilising the framework itself.</li>
+          <li>Worked directly with a range of project managers at Tilt and with the stakeholders at the end client.</li>
+        </ul>
+      </div>
+    </article>
+    
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Wordpress and Fractal style-guide updates for Hugo and Cat</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.hugoandcat.com">www.hugoandcat.com</a>
+          <span class="duration">
+            <time datetime="09-2020">September 2020</time> to <time datetime="10-2020">October 2020</time>
+          </span>
+        </div>
+      </header>
+    
+      <div class="article-content">
+        <p>Worked on two projects. One to finish up a set of sites for a global PR agency, and another to implement client feedback on a style-guide for an entertainment corporation.</p>
+        <ul class="list">
+          <li>Carried out general bug fixes and improvements on a Wordpress Multisite set up in final stages of the project.</li>
+          <li>Implemented client changes in the Fractal based style-guide, focused mainly around a complex vanilla JavaScript filtering component, and including adding functionality to support multiple languages.</li>
+        </ul>
+      </div>
+    </article>
+    
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Web app optimisation for Hugo and Cat</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.hugoandcat.com">www.hugoandcat.com</a>
+          <span class="duration">
+            <time datetime="06-2020">June 2020</time> to <time datetime="08-2020">August 2020</time>
+          </span>
+        </div>
+      </header>
+    
+      <div class="article-content">
+        <p>Carried out baseline performance analysis and recommended a course of action to decrease perceived and actual load times of a complex legacy web application for a major financial corporation.</p>
+        <ul class="list">
+          <li>Set up SpeedCurve and configured scripts to analyse different views within the application to allow performance to be monitored constantly.</li>
+          <li>Carried out basic image and webfont optimisation strategies saving approximately 40% in static asset size pre-caching.</li>
+          <li>Created a code splitting script, which separated pre-authentication and post-authentication CSS. This allowed the creation of a prototype loading a mininal CSS payload for user registration and login views, reducing the initial pre-cached CSS payload from 3.2MB to 420kB.</li>
+          <li>Investigated and recommended techniques to preload JavaScript and the remaining application CSS in the background using dns-prefetch and preconnects among other techniques.</li>
+        </ul>
+      </div>
+    </article>
+    
+    <article class="article article-work">
+      <header class="article-header">
+        <h3 class="article-heading">Wordpress site for Megaslice</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://megaslice.uk">megaslice.uk</a>
+          <span class="duration">
+            <time datetime="05-2020">May 2020</time> to <time datetime="06-2020">June 2020</time>
+          </span>
+        </div>
+      </header>
+    
+      <div class="article-content">
+        <p>A simple one page site for a new technology consultancy powered by Wordpress.</p>
+        <ul class="list">
+          <li>Developed the front end of the sites from scratch as a bespoke Wordpress theme.</li>
+          <li>Constructed custom Gutenberg blocks for the page using the Advanced Custom Fields plugin.</li>
+          <li>Connected the site to the clients internal communications tool allowing tight integration of the contact form and live chat to their workflow.</li>
+        </ul>
+      </div>
+    </article>
+    
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">Converting Drupal sites to Wordpress for Tilt</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
