Amended link to Github and added iconography

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -5,6 +5,7 @@
 $icons: (
   arrow: ( is-interactive: false ),
   email: ( is-interactive: true ),
+  github: ( is-interactive: true),
   gitlab: ( is-interactive: false),
   telephone: ( is-interactive: true ),
   twitter: ( is-interactive: true )
