Updated career history with latest project

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -7,6 +7,28 @@
   <div class="section-content">
     <article class="article article-work">
       <header class="article-header">
+        <h3 class="article-heading">Building a single page web app in React for Hugo and Cat</h3>
+        <div class="article-metadata">
+          <a rel="external" href="https://www.hugoandcat.com">www.hugoandcat.com</a>
+          <span class="duration">
+            <time datetime="10-2022">October 2022</time> to <time datetime="01-2023">January 2023</time>
+          </span>
+        </div>
+      </header>
+    
+      <div class="article-content">
+        <p>Front end developer on a project to create a dashboard app, displaying a number of charts and statistics monitoring roll-out and communication of devices for a telecommunications company.</p>
+        <ul class="list">
+          <li>Developed the front of the of the React app in StoryBook for rapid development while the backend was being worked on.</li>
+          <li>Connected application to backed sources using React Query</li>
+          <li>Created a number of charts based on customised Victory Charts components as well as bespoke charts as SVG React components.</li>
+          <li>Carried out demonstrations of progress of the app to internal team at Hugo & Cat as well as to stakeholders at the client company.</li>
+        </ul>
+      </div>
+    </article>
+    
+    <article class="article article-work">
+      <header class="article-header">
         <h3 class="article-heading">Managing and developing Hugo static sites for Tilt</h3>
         <div class="article-metadata">
           <a rel="external" href="https://www.wearetilt.com">www.wearetilt.com</a>
@@ -21,7 +43,7 @@
         <ul class="list">
           <li>Managed development on improvements to the initial framework to improve structure and usability of the scripts and code.</li>
           <li>Produced components in JavaScript and Hugo Shortcodes to allow rich features such as Search, User Challenges, Quiz's, Carousels and other custom functionality.</li>
-          <li>Moved development from an old JQuery stack to using modular ES6 vanilla JavaScript once IE 11 support was dropped.</li>
+          <li>Moved development from an old jQuery stack to using modular ES6 vanilla JavaScript once IE 11 support was dropped.</li>
           <li>Developed and wrote rich documentation for all features and components utilising the framework itself.</li>
           <li>Worked directly with a range of project managers at Tilt and with the stakeholders at the end client.</li>
         </ul>
