Fixed typo - added print breakpoint in layout all

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -20,9 +20,9 @@
         <p>Front end developer on a project to create a dashboard app, displaying a number of charts and statistics monitoring roll-out and communication of devices for a telecommunications company.</p>
         <ul class="list">
           <li>Developed the front of the of the React app in StoryBook for rapid development while the backend was being worked on.</li>
-          <li>Connected application to backed sources using React Query</li>
-          <li>Created a number of charts based on customised Victory Charts components as well as bespoke charts as SVG React components.</li>
-          <li>Carried out demonstrations of progress of the app to internal team at Hugo & Cat as well as to stakeholders at the client company.</li>
+          <li>Connected application to backend using React Query.</li>
+          <li>Created a number of charts based on customised Victory Charts components, and bespoke charts as SVG React components.</li>
+          <li>Carried out demonstrations of progress of the app to internal team at Hugo & Cat as well as to stakeholders at the client company thorough sprints.</li>
         </ul>
       </div>
     </article>
