--- a/src/scss/layouts/_all.scss
+++ b/src/scss/layouts/_all.scss
@@ -65,6 +65,16 @@
   @include respond-below(medium) {
     order: 1;
   }
+  
+  .article-work {
+    @media print {
+      display: none;
+    
+      &:nth-child(-n+8) {
+        display: block;
+      }
+    }
+  }
 }
 
 .section-about {
