Ensured responsive code doesnt affect print version

--- a/src/scss/abstracts/mixins/_respond-above.scss
+++ b/src/scss/abstracts/mixins/_respond-above.scss
@@ -8,7 +8,7 @@
 @mixin respond-above($breakpoint) {
   @if map-has-key($breakpoints, $breakpoint) {
     $breakpoint-value: map-get($breakpoints, $breakpoint);
-    @media (min-width: $breakpoint-value) {
+    @media screen and (min-width: $breakpoint-value) {
       @content;
     }
   } @else {
