--- a/src/scss/abstracts/mixins/_respond-below.scss
+++ b/src/scss/abstracts/mixins/_respond-below.scss
@@ -8,7 +8,7 @@
 @mixin respond-below($breakpoint) {
   @if map-has-key($breakpoints, $breakpoint) {
     $breakpoint-value: map-get($breakpoints, $breakpoint);
-    @media (max-width: ($breakpoint-value - 1)) {
+    @media screen and (max-width: ($breakpoint-value - 1)) {
       @content;
     }
   } @else {
